<?xml version="1.0"?>
<package format="3">
  <name>geograsp</name>
  <version>0.4.0</version>
  <description>The GeoGrasp package: a geometry-based method for computing grasping points on 3D point clouds. This is a package ported from Brayan Zapata's ROS package to ROS2.</description>

  <maintainer email="mikaelam@stud.ntnu.no">Mikael Medina</maintainer>

  <license>BSD-2-Clause</license>

  <url type="website">https://github.com/mikaelmedina/GeoGrasp</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>libpcl-all-dev</depend>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>
  
  <exec_depend>libpcl-all</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
